<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="no">No</string>
  <string name="yes">Yes</string>

  <string name="menu_confirm">Confirm</string>
  <string name="menu_copy">Copy</string>
  <string name="menu_download">Download</string>
  <string name="menu_move">Move</string>
  <string name="menu_retry">Retry</string>
  <string name="menu_rename">Rename</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_more">Menu</string>

  <string name="message_download_in_progress">Download in progress, check your notification.</string>
  <string name="message_downloading">Downloading %1$s</string>
  <string name="message_exit">Are you sure you want to exit?</string>
  <string name="message_move_success">Success to move</string>

  <string name="title_downloading">Downloading File</string>
  <string name="title_exit">Exit Confirmation</string>

  <string name="format_message_move_failed">Fail to move.\nCause: %1$s</string>
  <string name="format_move_title"><![CDATA[Move: %1$s => %2$s]]></string>
  <string name="format_copy_title"><![CDATA[Copy: %1$s => %2$s]]></string>
  <string name="format_usage">%1$s / %2$s</string>
  <string name="format_title_rename">Rename \'%1$s\'</string>

  <string name="button_confirm">Confirm</string>
  <string name="button_cancel">Cancel</string>
  
  <string name="hint_rename">Rename</string>
</resources>
