<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/horizontal_margin"
    android:layout_marginVertical="@dimen/vertical_margin"
    android:orientation="vertical">

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/text_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:gravity="center"
      android:lines="2"
      android:paddingHorizontal="@dimen/horizontal_margin"
      android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Menu" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/menu_download"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/menu_download"
      app:layout_constraintTop_toBottomOf="@id/text_title" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/menu_rename"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/menu_rename"
      app:layout_constraintTop_toBottomOf="@id/menu_download" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/menu_copy"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/menu_copy"
      app:layout_constraintTop_toBottomOf="@id/menu_rename" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/menu_move"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/menu_move"
      app:layout_constraintTop_toBottomOf="@id/menu_copy" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/menu_delete"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/menu_delete"
      android:textColor="@color/icon_red"
      app:layout_constraintTop_toBottomOf="@id/menu_move" />

</androidx.constraintlayout.widget.ConstraintLayout>
